@@ -3,6 +3,7 @@ Changelog for Percona Toolkit
 v3.0.6
 
  * Fixed bug     PT-225: pt-table-checksum ignores generated cols
+ * Improvement   PT-221: pt-table-sync pt-table-sync support for MyRocks
 
 v3.0.5 released 2017-11-20
 
